Add styles for additional butons, change font to monotype

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="https://fonts.googleapis.com/css?family=Chakra+Petch"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nova+Mono"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
@@ -15,6 +19,9 @@
       <nav class="controls">
         <a href="#" class="button" id="start">Start</a>
         <a href="#" class="button" id="stop">Stop</a>
+        <a href="#" class="button" id="reset">Reset</a>
+        <a href="#" class="button" id="add-result">Add result</a>
+        <a href="#" class="button" id="reset-results">Reset Results</a>
       </nav>
       <div class="stopwatch"></div>
       <ul class="results"></ul>
